--- a/404.html
+++ b/404.html
@@ -20,6 +20,6 @@ layout: post
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>this is a blank page.</strong></p>
+  <p><strong>this page doesn't exist.</strong></p>
   <p>what're you looking for?</p>
 </div>
