--- a/404.html
+++ b/404.html
@@ -21,5 +21,5 @@ layout: post
   <h1>404</h1>
 
   <p><strong>this page doesn't exist.</strong></p>
-  <p>what're you looking for?</p>
+  <p>it is, as you can see, completely b l  a   n    k</p>
 </div>
