--- a/404.html
+++ b/404.html
@@ -22,5 +22,5 @@ layout: post
 
   <p><strong>this page doesn't exist.</strong></p>
   <p>it is, as you can see, completely b l  a   n    k</p>
-  <p><b><a href="return to safety">https://anorakx.github.io</a></b></p>
+  <p><b><a href="https://anorakx.github.io">return to safety</a></b></p>
 </div>
