--- a/404.html
+++ b/404.html
@@ -21,6 +21,6 @@ layout: post
   <h1>404</h1>
 
   <p><strong>this page doesn't exist.</strong></p>
-  <p>it is, as you can see, completely b l  a   n    k</p>
+  <p>this is an empty page. scary, isn't it?</p>
   <p><b><a href="https://anorakx.github.io">return to safety</a></b></p>
 </div>
