--- a/15242781.html
+++ b/15242781.html
@@ -1,23 +1,3 @@
 <body>
-  <p>
-  =================================
-  Station: TSUKURU-117
-  Laboratory: QUINQUE
-  Project: APATE
-  Operation Status: GREEN
-    > All systems are go.
-  Objective: CLASSIFIED
-    > Recording of this information
-      is a capital offense.
-  Current Number of Subjects: XXIII
-  =================================
-  ENTRY I
-  Date: 09-02-2106
-  Principal Investigator: ███████
-  Status: YELLOW
-    All operators are stable.
-    Tsukuru systems have been tested.
-    Interface is primed and ready.
-    Subjects are being collected.
-  </p>
+  <p>=================================<br>Station: TSUKURU-117<br>Laboratory: QUINQUE<br>Project: APATE<br>Operation Status: GREEN<br>- All systems are go.<br>Objective: CLASSIFIED<br>- Recording of this information<br>  is a capital offense.<br>Current Number of Subjects: XXIII<br>=================================<br>ENTRY I<br>Date: 09-02-2106<br>Principal Investigator: ███████<br>Status: YELLOW<br>  All operators are stable.<br>  Tsukuru systems have been tested.<br>  Interface is primed and ready.  Subjects are being collected.</p>
 </body>
