--- a/CODEHERE.html
+++ b/CODEHERE.html
@@ -1,2 +1,1 @@
-No, put the actual code from the file after the anorakx.github.io URL.
-Hint: It should be 8 numbers.
+No, put the actual code from the file after the anorakx.github.io URL.<br>Hint: It should be 8 numbers.
