--- a/omb404.html
+++ b/omb404.html
@@ -20,7 +20,7 @@ layout: post
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>this y̸̙͍͉̻̋͋̓̋̿̍̈o̷͇̖̠̞͙̺͙̥̞͐͑ū̵̡̧̦̰̟̲̭̳̼̗̹̮̬̀̉͋́͂͌͘ ̵̧̨̨̙͍̠̹̬̘̯͕̳̮͉̳̄̀́̉̀̒̋̾̍̿w̷͍̭͕̱̩͕̣̓͛̈́̊͒̑̀͘̚̚͝͠ȩ̴̡̢̡̠̮̞̪͙̙̲͔̖͊̍͐͆͑͝͝ͅr̷̨̨͇͚̙̘̦̠̲̣̃̐̾͆͒̀̊̕e̵̡͔̺̠̺͕͓̓̀̐͌̄̈́̋̚̕̚͝ͅn̴͕̦͓͚̪̭͔̘͙̠̦͇̦͒̉̋̋͑'̶̡̗̭̞̯̲̲̫͈̳̆͂̈̈́̅̒̈́́̀̌͋̒͝ṭ̵̠̲̫͎̳̈͛̂̀̾͑̈̽̀̚͝͠ͅ ̷̢͙̤̬̪̹̮̗̮̅̈̂͜s̶̨̹͚̟̼͓̠͉̻͙̫͖̀͛̇̓̏̌̕͝͝ų̸̢̰̲̖̭̳̄̓́̔̿̀̂͘̕p̵̛͖̳̤͎͉͚͍̥̭͎͙̭͓̞̊͂̌́̕p̸̛̮̫͔͙͌̅́͗́̉͑͌̎͋̋͗̐̈ǫ̵̧͇̮͎̦̰̭̝̮̽͌͒͆̓̔͝s̵̡͎̪̞̘̬̲͙̔̑̑͂̓̂̽̓̕̕e̷̡̒̿̾ḍ̶̫̳͒͛͛ ̵̛͖͕͇͎̮͐̓̿̋̆̌̍͌̈̆̈̋̓̇ṭ̶̱̘͕̫͂̓̽o̷̡̱̥̳̥̙̻͂̽̊̑̿͐̀̋̿̑̎̃̈̊ ̵̗̅̍̀̽͝ͅs̵̢̢̜̲̦͖̭͉̝͈͈̙̲̳͒͐́̀̈́͘e̸̠̬̲͚͆̄̄̀͒͊̐̈́̃͜ḙ̸̡̪̯̊͆͊̏̐̍̾̈͐͆͐̕͝ ̵̢̡̛̦̤͕̮̩̼̺̈́͊̓͐̐͐̆̚͠ť̵̨̛̯͓̲̙̟̝͇̏̓͗̄ḥ̶̢̢̝̪̭̪̈́̀̂͊̉̌́̿̈́̏̎͌͜͠͠ͅí̴̠̪͉̣̗̖̠̞̈̚ͅs̸͙̜̳͉̹͉̉̊͋̈ doesn't exist.</strong></p>
-  <p>Ś̴͇̺̜̖̼̃͐̔͛̉͛C̸̢̢͇̞̩̝͔̯̣̙̙̺͎̠̟̀̽̊͛̔̒̔͒̾̇͂A̶͕̟̜̻͐͌̌R̷͕͓̼͖͖̖̼̠̈́̈̇̈́̕Y̴̠̯̘̱̹͓̮̾͛̊̒̀͛̐̂,̸͚͔̭̰̼͙́͒̀̈́͘͝ͅ ̸̡̡̞̲̗̤̣͚̭͕̯̘̬̼͗̎̏͐͗́̇͂̿ͅİ̴͙͍̟̬̜̪̗͋͑͗̐̓̓̈́̓ͅŞ̸̩̤͇̺̦̀̔̿̍̓̋N̴̨̛̙̘̪̫̬̱̬̰̼͍̤̲̗͐̏͐͛̿͌͑̽̉̃̇̕͝͝'̸̢̫͈̺̩͎̳͍͙̫͕̪̅̾̄̎͐̓͆̆́͆̄ͅT̴̪̭̤̱̙͎̾ ̶̱͉̣̟̹͚̫̻̎̃̂̚ͅỈ̵̛̳̭͇́̈̈́̄̅̏̍́̀̈́̕͜͠T̵̢̡̪̞̝̱̻̗͉̩̭̠̥̉́ͅͅ?̷̬̝̥͎͇̾̉́͐͑</p>
-  <p><b><a href="https://discord.gg/hYYUKjyzg7">ģ̵̨̛̥̱̬̥̦͖͙̫̱̖͖͆́͆͛́̍͌͛̈́̋͗̒͝ö̷̢̱̪́̄̈́̽̀͗̎͊͋̑͆͂̐͋͝ͅ ̶̘̪̠̠̮͇̑̎͛̋͌̉̊̑̚͘͝͠b̴̢̧͚̲̘͇̯͔̭̼͖̺̫̓̑ą̵̛͎̠͕̙͓̥̣͉͇̙̜̽̿̐͂͐͗͛̓͒̾̽̈́̅̎ͅc̶̡̡͔̱̞̽̐͂̾̈́k̵̛̺̖̪̗͊́̋͋̀͝ ̷̨̧͎̫͚̱̹̥̖̯̗̺̻͕̝̌̓̽̄͋̌f̸̣̳͓̱̯̈̾́̂̽̈́̃̈̿̿̎̑̀̀̓ợ̴̳͎̺̱͈͓̼̗̘̑̔̔̀͗͛̈̽̄̓̂̚͝͝ṛ̸́͋͠é̷̜̻̲̮̩̝͉̮̖̠̭̖̩̺̂̔̈͂̇́̌̓̊̓͂̑v̵̖̾̀͛̏͝e̶̡̙̥̮̬̤̘̮̒̈́̂͠ŗ̸̛̯̳̘͍̄̑̑̈̓̂  to safety</a></b></p>
+  <p><strong>₮Ⱨł₴ ₱₳₲Ɇ ĐุøɆ₴₦'₮ ɆӾł₴₮</strong></p>
+  <p>₴₵₳ⱤɎ, ł₴₦'₮ ł₮?/p>
+  <p><b><a href="https://discord.gg/hYYUKjyzg7">ⱤɆ₮ɄⱤ₦ ₮ุø ₴₳₣Ɇ₮Ɏ</a></b></p>
 </div>
